--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-</h1>hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Charity for Human Rights</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Charity for Human Rights</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#mission">Our Mission</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="about">
+            <h2>About Us</h2>
+            <p>We are dedicated to promoting human rights and ensuring justice for all.</p>
+        </section>
+        <section id="mission">
+            <h2>Our Mission</h2>
+            <p>Our mission is to advocate for human rights and provide support to those in need.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 Charity for Human Rights</p>
+    </footer>
+</body>
+</html>
