--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charity for Human Rights</title>
+    <title>Foundation</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Charity for Human Rights</h1>
+        <h1>Foundatoin</h1>
         <nav>
             <ul>
                 <li><a href="#about">About Us</a></li>
@@ -28,7 +28,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 Charity for Human Rights</p>
+        <p>&copy; 2025 Foundation</p>
     </footer>
 </body>
 </html>
