--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1>Foundatoin</h1>
+    </header>
+    <div class="nav-container">
         <nav>
             <ul>
                 <li><a href="#about">About Us</a></li>
@@ -16,7 +18,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-    </header>
+    </div>
     <main>
         <section id="about">
             <h2>About Us</h2>
