Fix element overlap

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <header>
-        <h1>Foundation</h1>
-    </header>
-        <nav>
+        <div class="logo">Logo</div>
+        <nav class="nav-container">
             <ul>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#mission">Our Mission</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+    </header>
     <main>
         <section id="about">
             <h2>About Us</h2>
