Update logo text in header for clarity

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="Foundation">Logo</div>
+        <div class="logo">Foundation</div>
         <nav class="nav-container">
             <ul>
                 <li><a href="#">Home</a></li>
