--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class="logo">Foundation</div>
         <nav class="nav-container">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#">Issues</a></li>
+                <li><a href="#">Take Action</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
