Add new pages: About, Issues, and Take Action; update navigation links in header for consistency

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <div class="logo">Foundation</div>
+        <div class="logo"><a href="index.html">Foundation</a></div>
         <nav class="nav-container">
             <ul>
-                <li><a href="#">Issues</a></li>
-                <li><a href="#">Take Action</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="issues.html">Issues</a></li>
+                <li><a href="take-action.html">Take Action</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </nav>
     </header>
