Enhance navigation with dropdown for Issues; update header styles for better visibility

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
         <div class="logo"><a href="index.html">Foundation</a></div>
         <nav class="nav-container">
             <ul>
-                <li><a href="issues.html">Issues</a></li>
+                <li class="dropdown">
+                    <a href="issues.html">Issues</a>
+                    <ul class="dropdown-content">
+                        <li><a href="#">Economics</a></li>
+                        <li><a href="#">Social</a></li>
+                        <li><a href="#">Climate</a></li>
+                    </ul>
+                </li>
                 <li><a href="take-action.html">Take Action</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
