Add dropdown navigation for Issues with links to Economic, Social, and Climate pages; create new pages for Economic, Social, and Climate issues with corresponding content.

--- a/social.html
+++ b/social.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Take Action - Foundation</title>
+    <title>Foundation</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -26,8 +26,8 @@
     </header>
     <main>
         <section>
-            <h2>Take Action</h2>
-            <p>Content about taking action will go here.</p>
+            <h2>Social</h2>
+            <p>Content About Social Issues</p>
         </section>
     </main>
     <footer>
