--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <li class="dropdown">
                     <a href="issues.html">Issues</a>
                     <ul class="dropdown-content">
-                        <li><a href="#">Economics</a></li>
-                        <li><a href="#">Social</a></li>
-                        <li><a href="#">Climate</a></li>
+                        <li><a href="economic.html">Economic</a></li>
+                        <li><a href="social.html">Social</a></li>
+                        <li><a href="climate.html">Climate</a></li>
                     </ul>
                 </li>
                 <li><a href="take-action.html">Take Action</a></li>
