--- a/issues/climate.html
+++ b/issues/climate.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foundation</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html">Foundation</a></div>
+        <div class="logo"><a href="../index.html">Foundation</a></div>
         <nav class="nav-container">
             <ul>
                 <li class="dropdown">
-                    <a href="issues.html">Issues</a>
+                    <a href="../issues.html">Issues</a>
                     <ul class="dropdown-content">
                         <li><a href="economic.html">Economic</a></li>
                         <li><a href="social.html">Social</a></li>
                         <li><a href="climate.html">Climate</a></li>
                     </ul>
                 </li>
-                <li><a href="take-action.html">Take Action</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="../take-action.html">Take Action</a></li>
+                <li><a href="../about.html">About</a></li>
             </ul>
         </nav>
     </header>
