--- a/take-action.html
+++ b/take-action.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Take Action - Foundation</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -14,9 +14,9 @@
                 <li class="dropdown">
                     <a href="issues.html">Issues</a>
                     <ul class="dropdown-content">
-                        <li><a href="economic.html">Economic</a></li>
-                        <li><a href="social.html">Social</a></li>
-                        <li><a href="climate.html">Climate</a></li>
+                        <li><a href="issues/economic.html">Economic</a></li>
+                        <li><a href="issues/social.html">Social</a></li>
+                        <li><a href="issues/climate.html">Climate</a></li>
                     </ul>
                 </li>
                 <li><a href="take-action.html">Take Action</a></li>
