--- a/take-action/donate.html
+++ b/take-action/donate.html
@@ -14,16 +14,16 @@
                 <li class="dropdown">
                     <a href="../issues.html">Issues</a>
                     <ul class="dropdown-content">
-                        <li><a href="economic.html">Economic</a></li>
-                        <li><a href="social.html">Social</a></li>
-                        <li><a href="climate.html">Climate</a></li>
+                        <li><a href="../issues/economic.html">Economic</a></li>
+                        <li><a href="../issues/social.html">Social</a></li>
+                        <li><a href="../issues/climate.html">Climate</a></li>
                     </ul>
                 </li>
                 <li class="dropdown" >
                     <a href="../take-action.html">Take Action</a>
                     <ul class="dropdown-content">
-                        <li><a href="../take-action/donate.html">Donate</a></li>
-                        <li><a href="../take-action/trusted-organizations.html">Trusted Organizations</a></li>
+                        <li><a href="donate.html">Donate</a></li>
+                        <li><a href="trusted-organizations.html">Trusted Organizations</a></li>
                     </ul>
                 </li>
                 <li><a href="../about.html">About</a></li>
@@ -32,8 +32,8 @@
     </header>
     <main>
         <section>
-            <h2>Social</h2>
-            <p>Content About Social Issues</p>
+            <h2>Donate</h2>
+            <p>We are currently not accepting donations.</p>
         </section>
     </main>
     <footer>
