--- a/take-action.html
+++ b/take-action.html
@@ -19,7 +19,13 @@
                         <li><a href="issues/climate.html">Climate</a></li>
                     </ul>
                 </li>
-                <li><a href="take-action.html">Take Action</a></li>
+                <li class="dropdown" >
+                    <a href="take-action.html">Take Action</a>
+                    <ul class="dropdown-content">
+                        <li><a href="take-action/donate.html">Donate</a></li>
+                        <li><a href="take-action/trusted-organizations.html">Trusted Organizations</a></li>
+                    </ul>
+                </li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
