Revise 'Trusted Organizations' section to include specific categories: Climate, Economic, and Social, with updated descriptions for each initiative.

--- a/take-action/trusted-organizations.html
+++ b/take-action/trusted-organizations.html
@@ -31,13 +31,21 @@
         </nav>
     </header>
     <main>
-        <section id="Trusted Organizations">
-            <h2>About Us</h2>
-            <p>We are dedicated to promoting human rights and ensuring justice for all.</p>
+        <section>
+            <h2>Trusted Organizations</h2>
+            <p>Here are some organizations that we trust to make a difference.</p>
         </section>
-        <section id="Climate">
-            <h2>Our Mission</h2>
-            <p>Our mission is to advocate for human rights and provide support to those in need.</p>
+        <section>
+            <h2>Climate</h2>
+            <p>Here are some organizations that are leading climate initiatives.</p>
+        </section>
+        <section>
+            <h2>Economic</h2>
+            <p>Here are some organizations that are leading economic initiatives.</p>
+        </section>
+        <section>
+            <h2>Social</h2>
+            <p>Here are some organizations that are leading social initiatives.</p>
         </section>
     </main>
     <footer>
