Revise content structure for Issues and Climate pages; update navigation links to include Climate section and enhance descriptions for better clarity on societal challenges.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <li class="dropdown">
                     <a href="issues.html">Issues</a>
                     <ul class="dropdown-content">
+                        <li><a href="issues/climate.html">Climate</a></li>
                         <li><a href="issues/economic.html">Economic</a></li>
                         <li><a href="issues/social.html">Social</a></li>
-                        <li><a href="issues/climate.html">Climate</a></li>
                     </ul>
                 </li>
                 <li class="dropdown" >
@@ -32,12 +32,12 @@
     </header>
     <main>
         <section id="about">
-            <h2>About Us</h2>
-            <p>We are dedicated to promoting human rights and ensuring justice for all.</p>
+            <h2>The Issues</h2>
+            <p>Modern society is facing many challenges, including climate change, social inequality, and economic instability. By working to eliminate these issues, we can improve the human standard of living.</p>
         </section>
         <section id="mission">
             <h2>Our Mission</h2>
-            <p>Our mission is to advocate for human rights and provide support to those in need.</p>
+            <p>Our mission is to lead or help fund initiatives that focus on climate, social, and economic issues.</p>
         </section>
     </main>
     <footer>
