--- a/issues.html
+++ b/issues.html
@@ -32,9 +32,18 @@
     </header>
     <main>
         <section>
-            <h2>Issues</h2>
-            <p>Content about issues will go here.</p>
+            <h2>Climate</h2>
+            <p>Content about climate issues will go here.</p>
         </section>
+        <section>
+            <h2>Economic</h2>
+            <p>Content about economic issues will go here.</p>
+        </section>
+        <section>
+            <h2>Social</h2>
+            <p>Content about social issues will go here.</p>
+        </section>
+        
     </main>
     <footer>
         <p>&copy; 2025 Foundation</p>
