Refactor issue sections to standardize class names and enhance content structure; update Economic and Social pages with new sections and images for better clarity on topics.

--- a/issues/climate.html
+++ b/issues/climate.html
@@ -31,8 +31,8 @@
         </nav>
     </header>
     <main>
-        <section class="climate-section">
-            <div class="climate-content">
+        <section class="issues-section">
+            <div class="issues-content">
                 <h2>Climate</h2>
                 <p>Content about Climate Issues</p>
             </div>
