Revise content in issue sections to provide detailed descriptions of societal challenges, including updates to the About, Climate, Economic, and Social pages for improved clarity and engagement.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
         <section id="about">
             <h2>The Issues</h2>
-            <p>Modern society is facing many challenges, including climate change, social inequality, and economic instability. By working to eliminate these issues, we can improve the human standard of living.</p>
+            <p>Society is facing many challenges, including climate change, social inequality, and economic instability. By working to eliminate these issues, we can improve the human standard of living.</p>
         </section>
         <section id="mission">
             <h2>Our Mission</h2>
