Enhance homepage layout with new hero section and mission statement; add focus areas for Climate Action, Social Equity, and Economic Empowerment. Update styles for improved visual hierarchy and responsiveness.

--- a/index.html
+++ b/index.html
@@ -27,18 +27,99 @@
                     </ul>
                 </li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="take-action/donate.html" class="nav-donate-button">Donate</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="about">
-            <h2>The Issues</h2>
-            <p>Society is facing many challenges, including climate change, social inequality, and economic instability. By working to eliminate these issues, we can improve the human standard of living.</p>
+        <section class="hero-section">
+            <div class="hero-container">
+                <h1>Building a Sustainable & Equitable Future</h1>
+                <p>
+                    [Charity Name] is dedicated to tackling pressing climate, social, and economic challenges to create a just and thriving world for all.
+                </p>
+                <a href="#focus-areas" class="hero-button">
+                    Discover Our Work
+                </a>
+            </div>
         </section>
-        <section id="mission">
-            <h2>Our Mission</h2>
-            <p>Our mission is to lead or help fund initiatives that focus on climate, social, and economic issues.</p>
-        </section>
+    <section id="mission" class="mission-section">
+        <div class="mission-container">
+            <div class="mission-header">
+                <h2>Our Mission & Vision</h2>
+                <p>
+                    We believe in a world where environmental sustainability, social equity, and economic opportunity are intertwined. Our mission is to empower communities, advocate for systemic change, and implement solutions that address the root causes of global inequalities and environmental degradation.
+                </p>
+            </div>
+            <div class="mission-grid">
+                <div class="mission-item">
+                    <svg class="mission-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 0 0 8.716-6.747M12 21a9.004 9.004 0 0 1-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 0 1 7.843 4.582M12 3a8.997 8.997 0 0 0-7.843 4.582m15.686 0A11.953 11.953 0 0 1 12 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0 1 21 12c0 .778-.099 1.533-.284 2.253m0 0A11.978 11.978 0 0 1 12 13.5c-2.998 0-5.74-1.1-7.843-2.918m0 0A8.959 8.959 0 0 0 3 12c0-.778.099-1.533.284-2.253m0 0A11.953 11.953 0 0 0 12 10.5c2.998 0 5.74 1.1 7.843 2.918" />
+                    </svg>
+                    <h3>Holistic Approach</h3>
+                    <p>Addressing interconnected global challenges with comprehensive strategies.</p>
+                </div>
+                <div class="mission-item">
+                    <svg class="mission-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M18 18.72a9.094 9.094 0 0 0 3.741-.479 3 3 0 0 0-4.682-2.72m.94 3.198.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0 1 12 21c-2.17 0-4.207-.576-5.963-1.584A8.962 8.962 0 0 1 6 18.719m12 0a8.962 8.962 0 0 0-5.963 1.584A8.962 8.962 0 0 0 6 18.719m12 0c.355.03.71.064 1.064.096m-8.064.096A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-2.064-.096M12 14.25c-3.223 0-5.934 1.306-7.5 3.25m15 0c-1.566-1.944-4.277-3.25-7.5-3.25M12 14.25V4.5" />
+                    </svg>
+                    <h3>Community Empowerment</h3>
+                    <p>Working alongside communities to build resilience and drive local solutions.</p>
+                </div>
+                <div class="mission-item">
+                    <svg class="mission-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 3v11.25A2.25 2.25 0 0 0 6 16.5h12A2.25 2.25 0 0 0 20.25 14.25V3M3.75 3v-1.5A2.25 2.25 0 0 1 6 0h12a2.25 2.25 0 0 1 2.25 2.25v1.5M3.75 3h16.5M16.5 9.75h.008v.008H16.5V9.75Z" />
+                    </svg>
+                    <h3>Advocacy for Change</h3>
+                    <p>Championing policies that promote sustainability, justice, and economic fairness.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="focus-areas">
+        <div class="focus-areas-container">
+            <div class="focus-areas-header">
+                <h2>Our Focus Areas</h2>
+                <p>
+                    We concentrate our efforts on three critical, interconnected areas to maximize our impact.
+                </p>
+            </div>
+            <div class="focus-areas-grid">
+                <div class="focus-area-card">
+                    <div class="focus-area-icon">
+                        <svg class="w-12 h-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
+                        </svg>
+                    </div>
+                    <h3>Climate Action</h3>
+                    <p>Promoting renewable energy, sustainable land use, and climate resilience to protect our planet for future generations.</p>
+                    <a href="#">Learn More &rarr;</a>
+                </div>
+
+                <div class="focus-area-card">
+                     <div class="focus-area-icon">
+                        <svg class="w-12 h-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M18 18.72a9.094 9.094 0 0 0 3.741-.479 3 3 0 0 0-4.682-2.72m.94 3.198.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0 1 12 21c-2.17 0-4.207-.576-5.963-1.584A8.962 8.962 0 0 1 6 18.719m12 0a8.962 8.962 0 0 0-5.963 1.584A8.962 8.962 0 0 0 6 18.719m12 0c.355.03.71.064 1.064.096m-8.064.096A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-2.064-.096M12 14.25c-3.223 0-5.934 1.306-7.5 3.25m15 0c-1.566-1.944-4.277-3.25-7.5-3.25M12 14.25V4.5" />
+                        </svg>
+                    </div>
+                    <h3>Social Equity</h3>
+                    <p>Championing human rights, access to education and healthcare, and empowering marginalized communities.</p>
+                    <a href="#">Learn More &rarr;</a>
+                </div>
+
+                <div class="focus-area-card">
+                     <div class="focus-area-icon">
+                        <svg class="w-12 h-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0 1 15.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 0 1 3 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 0 0-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 0 1-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 0 0 3 15h-.75M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm3 0h.008v.008H18V10.5Zm-12 0h.008v.008H6V10.5Z" />
+                        </svg>
+                    </div>
+                    <h3>Economic Empowerment</h3>
+                    <p>Fostering sustainable livelihoods, fair trade, and inclusive economic growth for vulnerable populations.</p>
+                    <a href="#">Learn More &rarr;</a>
+                </div>
+            </div>
+        </div>
+    </section>
     </main>
     <footer>
         <p>&copy; 2025 Foundation</p>
