Add "Donate" navigation link to multiple pages for improved accessibility to donation options

--- a/take-action/donate.html
+++ b/take-action/donate.html
@@ -27,6 +27,7 @@
                     </ul>
                 </li>
                 <li><a href="../about.html">About</a></li>
+                <li><a href="take-action/donate.html" class="nav-donate-button">Donate</a></li>                
             </ul>
         </nav>
     </header>
