Update mission statement and focus area descriptions for clarity and engagement

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="hero-container">
                 <h1>Building a Sustainable & Equitable Future</h1>
                 <p>
-                    [Charity Name] is dedicated to tackling pressing climate, social, and economic challenges to create a just and thriving world for all.
+                    Foundatoin is dedicated to tackling pressing climate, social, and economic challenges to create a just and thriving world for all.
                 </p>
                 <a href="#focus-areas" class="hero-button">
                     Discover Our Work
@@ -92,7 +92,7 @@
                         </svg>
                     </div>
                     <h3>Climate Action</h3>
-                    <p>Promoting renewable energy, sustainable land use, and climate resilience to protect our planet for future generations.</p>
+                    <p>Adressing climate change through the funding of projects that reduce emissions, promote sustainability and protect ecosystems .</p>
                     <a href="#">Learn More &rarr;</a>
                 </div>
 
@@ -103,7 +103,7 @@
                         </svg>
                     </div>
                     <h3>Social Equity</h3>
-                    <p>Championing human rights, access to education and healthcare, and empowering marginalized communities.</p>
+                    <p>Confront social inequality by empowering programs that promote justice, inclusion and human rights.</p>
                     <a href="#">Learn More &rarr;</a>
                 </div>
 
@@ -114,7 +114,7 @@
                         </svg>
                     </div>
                     <h3>Economic Empowerment</h3>
-                    <p>Fostering sustainable livelihoods, fair trade, and inclusive economic growth for vulnerable populations.</p>
+                    <p>Tackling economic instability by supporting initiatives that foster equitable growth and financial resilience..</p>
                     <a href="#">Learn More &rarr;</a>
                 </div>
             </div>
