Enhance visual consistency and accessibility by updating dropdown styles, adding hover effects, and improving focus area sections on multiple pages.

--- a/take-action.html
+++ b/take-action.html
@@ -32,7 +32,18 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="hero-section">
+            <div class="hero-container">
+                <h1>Take Action</h1>
+                <p>
+                    Get involved and help us create a more sustainable and equitable future. Discover ways you can make a difference.
+                </p>
+                <a href="#take-action-details" class="hero-button">
+                    See How
+                </a>
+            </div>
+        </section>
+        <section id="take-action-details">
             <h2>Take Action</h2>
             <p>Content about taking action will go here.</p>
         </section>
