--- a/take-action/donate.html
+++ b/take-action/donate.html
@@ -32,6 +32,14 @@
         </nav>
     </header>
     <main>
+        <section class="hero-section">
+            <div class="hero-container">
+                <h1>Donate</h1>
+                <p>
+                    Your support helps us drive change and fund impactful projects. Thank you for considering a donation.
+                </p>
+            </div>
+        </section>
         <section>
             <h2>Donate</h2>
             <p>We are currently not accepting donations.</p>
