--- a/take-action/trusted-organizations.html
+++ b/take-action/trusted-organizations.html
@@ -32,6 +32,14 @@
         </nav>
     </header>
     <main>
+        <section class="hero-section">
+            <div class="hero-container">
+                <h1>Trusted Organizations</h1>
+                <p>
+                    We partner with and support organizations that are making a real difference in climate, economic, and social issues.
+                </p>
+            </div>
+        </section>
         <section>
             <h2>Trusted Organizations</h2>
             <p>Here are some organizations that we trust to make a difference.</p>
