Revise content on About and Take Action pages for clarity and engagement; update styles for improved visual consistency in info sections.

--- a/about.html
+++ b/about.html
@@ -32,9 +32,21 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2>About</h2>
-            <p>Content about the foundation will go here.</p>
+        <section class="info-hero-section">
+            <div class="container">
+                <h2>About Us</h2>
+                <p>
+                    Foundation is committed to addressing the pressing climate, social, and economic challenges facing our world today. Our foundation was established with the goal of creating a sustainable and equitable future for all.
+                </p>
+                <h2>Our History</h2>
+                <p>
+                    Founded in 2020, we have grown from a small grassroots initiative into a recognized leader in the field of sustainability and social justice. Our journey has been marked by numerous successful projects and partnerships that have made a tangible impact in communities around the globe.
+                </p>
+                <h2>Our Goals</h2>
+                <p>
+                    Our primary goals include promoting environmental sustainability, advocating for social equity, and fostering economic empowerment. We believe that by addressing these interconnected issues, we can create lasting change and improve the quality of life for all individuals.
+                </p>
+            </div>
         </section>
     </main>
     <footer>
