--- a/take-action.html
+++ b/take-action.html
@@ -32,20 +32,16 @@
         </nav>
     </header>
     <main>
-        <section class="hero-section">
-            <div class="hero-container">
-                <h1>Take Action</h1>
+        <section class="info-hero-section">
+            <div class="container">
+                <h2>Take Action</h2>
                 <p>
-                    Get involved and help us create a more sustainable and equitable future. Discover ways you can make a difference.
+                    At Foundation, we believe that every individual can make a difference. Whether it's through donations, volunteering, or spreading awareness, your actions can help us create a sustainable and equitable future.
                 </p>
-                <a href="#take-action-details" class="hero-button">
-                    See How
-                </a>
-            </div>
-        </section>
-        <section id="take-action-details">
-            <h2>Take Action</h2>
-            <p>Content about taking action will go here.</p>
+                <h2>Get Involved</h2>
+                <p>
+                    Join us in our mission to address the pressing climate, social, and economic challenges facing our world today. Explore the various ways you can contribute and make an impact.
+                </p>
         </section>
     </main>
     <footer>
