Refactor section structure and styles for consistency; remove redundant sections and apply dark background to enhance visual hierarchy.

--- a/take-action/trusted-organizations.html
+++ b/take-action/trusted-organizations.html
@@ -42,19 +42,15 @@
                 </p>
             </div>
         </section>
-        <section>
-            <h2>Trusted Organizations</h2>
-            <p>Here are some organizations that we trust to make a difference.</p>
-        </section>
-        <section>
+        <section class="dark-bg-section">
             <h2>Climate</h2>
             <p>Here are some organizations that are leading climate initiatives.</p>
         </section>
-        <section>
+        <section class="dark-bg-section">
             <h2>Economic</h2>
             <p>Here are some organizations that are leading economic initiatives.</p>
         </section>
-        <section>
+        <section class="dark-bg-section">
             <h2>Social</h2>
             <p>Here are some organizations that are leading social initiatives.</p>
         </section>
