Refactor section styles to improve consistency; rename dark background class to trstd-org-section and update background color for better contrast.

--- a/take-action/trusted-organizations.html
+++ b/take-action/trusted-organizations.html
@@ -42,15 +42,15 @@
                 </p>
             </div>
         </section>
-        <section class="dark-bg-section">
+        <section class="trstd-org-section">
             <h2>Climate</h2>
             <p>Here are some organizations that are leading climate initiatives.</p>
         </section>
-        <section class="dark-bg-section">
+        <section class="trstd-org-section">
             <h2>Economic</h2>
             <p>Here are some organizations that are leading economic initiatives.</p>
         </section>
-        <section class="dark-bg-section">
+        <section class="trstd-org-section">
             <h2>Social</h2>
             <p>Here are some organizations that are leading social initiatives.</p>
         </section>
