Refactor SVG icons in mission and focus areas sections for improved clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="mission-item">
                     <svg class="mission-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M18 18.72a9.094 9.094 0 0 0 3.741-.479 3 3 0 0 0-4.682-2.72m.94 3.198.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0 1 12 21c-2.17 0-4.207-.576-5.963-1.584A8.962 8.962 0 0 1 6 18.719m12 0a8.962 8.962 0 0 0-5.963 1.584A8.962 8.962 0 0 0 6 18.719m12 0c.355.03.71.064 1.064.096m-8.064.096A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-2.064-.096M12 14.25c-3.223 0-5.934 1.306-7.5 3.25m15 0c-1.566-1.944-4.277-3.25-7.5-3.25M12 14.25V4.5" />
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5L3 9.75l9 5.25 9-5.25-9-5.25zm0 10.5v4.5m0 0a2.25 2.25 0 0 1-2.25-2.25m2.25 2.25a2.25 2.25 0 0 0 2.25-2.25" />
                     </svg>
                     <h3>Community Empowerment</h3>
                     <p>Working alongside communities to build resilience and drive local solutions.</p>
@@ -101,7 +101,7 @@
                 <div class="focus-area-card">
                      <div class="focus-area-icon">
                         <svg class="w-12 h-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="M18 18.72a9.094 9.094 0 0 0 3.741-.479 3 3 0 0 0-4.682-2.72m.94 3.198.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0 1 12 21c-2.17 0-4.207-.576-5.963-1.584A8.962 8.962 0 0 1 6 18.719m12 0a8.962 8.962 0 0 0-5.963 1.584A8.962 8.962 0 0 0 6 18.719m12 0c.355.03.71.064 1.064.096m-8.064.096A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-2.064-.096M12 14.25c-3.223 0-5.934 1.306-7.5 3.25m15 0c-1.566-1.944-4.277-3.25-7.5-3.25M12 14.25V4.5" />
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5L3 9.75l9 5.25 9-5.25-9-5.25zm0 10.5v4.5m0 0a2.25 2.25 0 0 1-2.25-2.25m2.25 2.25a2.25 2.25 0 0 0 2.25-2.25" />
                         </svg>
                     </div>
                     <h3>Social Equity</h3>
