Update navigation links to direct to 'Our Programs' instead of 'Donate'; add new programs.html page with program details.

--- a/take-action/donate.html
+++ b/take-action/donate.html
@@ -24,12 +24,12 @@
                 <li class="dropdown" >
                     <a href="../take-action.html">Take Action</a>
                     <ul class="dropdown-content">
-                        <li><a href="donate.html">Donate</a></li>
+                        <li><a href="programs.html">Our Programs</a></li>
                         <li><a href="trusted-organizations.html">Trusted Organizations</a></li>
                     </ul>
                 </li>
-                <li><a href="../about.html">About</a></li>
-                <li><a href="take-action/donate.html" class="nav-donate-button">Donate</a></li>                
+                <li><a href="about.html">About</a></li>
+                <li><a href="programs.html" class="nav-donate-button">Donate</a></li>                
             </ul>
         </nav>
     </header>
