--- a/take-action/programs.html
+++ b/take-action/programs.html
@@ -36,23 +36,23 @@
     <main>
         <section class="hero-section">
             <div class="hero-container">
-                <h1>Trusted Organizations</h1>
+                <h1>Our Programs</h1>
                 <p>
-                    We partner with and support organizations that are making a real difference in climate, economic, and social issues.
+                    Discover the programs we run and support to address climate, economic, and social challenges for a better future.
                 </p>
             </div>
         </section>
         <section class="trstd-org-section">
-            <h2>Climate</h2>
-            <p>Here are some organizations that are leading climate initiatives.</p>
+            <h2>Climate Programs</h2>
+            <p>Explore our initiatives focused on climate action, sustainability, and environmental protection.</p>
         </section>
         <section class="trstd-org-section">
-            <h2>Economic</h2>
-            <p>Here are some organizations that are leading economic initiatives.</p>
+            <h2>Economic Programs</h2>
+            <p>Learn about our efforts to promote economic empowerment, equity, and resilience.</p>
         </section>
         <section class="trstd-org-section">
-            <h2>Social</h2>
-            <p>Here are some organizations that are leading social initiatives.</p>
+            <h2>Social Programs</h2>
+            <p>See how we advance social justice, inclusion, and community well-being through our programs.</p>
         </section>
     </main>
     <footer>
