Implement responsive hamburger menu for mobile navigation; add toggle functionality and styles for improved user experience.

--- a/about.html
+++ b/about.html
@@ -32,6 +32,28 @@
                 <li><a href="take-action/programs.html" class="nav-donate-button">Donate</a></li>                
             </ul>
         </nav>
+        <div class="hamburger-icon" tabindex="0" aria-label="Open navigation menu">&#9776;</div>
+        <nav class="mobile-menu" aria-label="Mobile Navigation">
+            <ul>
+                <li class="dropdown">
+                    <a href="issues.html">Issues</a>
+                    <ul class="dropdown-content">
+                        <li><a href="issues/climate.html">Climate</a></li>
+                        <li><a href="issues/economic.html">Economic</a></li>
+                        <li><a href="issues/social.html">Social</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="take-action.html">Take Action</a>
+                    <ul class="dropdown-content">
+                        <li><a href="take-action/programs.html">Our Programs</a></li>
+                        <li><a href="take-action/trusted-organizations.html">Trusted Organizations</a></li>
+                    </ul>
+                </li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="take-action/programs.html" class="nav-donate-button">Donate</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section class="info-hero-section">
@@ -54,5 +76,6 @@
     <footer>
         <p>&copy; 2025 Foundation</p>
     </footer>
+    <script src="js/hamburger.js"></script>
 </body>
 </html>
