--- a/issues/economic.html
+++ b/issues/economic.html
@@ -28,7 +28,7 @@
                         <li><a href="../take-action/trusted-organizations.html">Trusted Organizations</a></li>
                     </ul>
                 </li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="../about.html">About</a></li>
                 <li><a href="../take-action/programs.html" class="nav-donate-button">Donate</a></li>
             </ul>
         </nav>
@@ -50,7 +50,7 @@
                         <li><a href="../take-action/trusted-organizations.html">Trusted Organizations</a></li>
                     </ul>
                 </li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="../about.html">About</a></li>
                 <li><a href="../take-action/programs.html" class="nav-donate-button">Donate</a></li>
             </ul>
         </nav>
